k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infinit-track
  labels:
    app: infinit-track
