k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infinit-track-app
  namespace: infinit-track
spec:
  type: ClusterIP
  selector:
    app: infinit-track-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
